public interface ICar extends IPosition{
    void setIsStoredTrue();
    void setIsStoredFalse();
    boolean getIsStored();
}
