public interface IMovable {
    void move();
    void turnRight();
    void turnLeft();
}
