public interface IPosition {
    void setXPos(double X);
    void setYPos(double Y);
    public void setXYPos(double X, double Y);
    public double getXPos();
    public double getYPos();
}
