public interface ITruck extends ICar{
}
