public interface ITruckBed {
    void rampUp(int amount);
    void rampDown(int amount);
}