@startuml

class CarController
class Carview
class DrawPanel
abstract class "Car"
abstract class "Truck"
class Garage
class StorageUnit
class Saab95
class Volvo240
class Scania
class CarTransport
interface ICar
interface ITruck
interface IMovable
interface IPosition
interface IPassengerCar
interface ITruckBed

"Car" <|..ICar
"Car" <|..IMovable
"Truck"<|-- "Car"
Volvo240<|--"Car"
Saab95<|--"Car"
Scania<|--"Truck"
Scania<|.. ITruck
Scania<|..ITruckBed
CarTransport<|--"Truck"
CarTransport<|..ITruck



digraph g {
    rankdir="TB"
    splines=polyline
    

'nodes 

@enduml